# sparky

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  cliff.toml  label.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy-website.yml  release-macos.yml  release-updater.yml  release-windows.yml  release.yml  tag-release.yml
.husky/: post-commit  pre-commit
app/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/public/: logs.html
app/src/: App.module.css  App.tsx  main.tsx  vite-env.d.ts
auth-core/: package.json
auth-core/src/: definition.ts  flow.ts  grants.ts  index.ts  logger.ts  oauth.ts
auth-flows/cli-device/: package.json
auth-flows/local/: package.json
auth-flows/oauth-pkce/: package.json
auth-flows/pat/: package.json
auth-flows/pi-device/: package.json
patches/: @mariozechner__pi-ai.patch  @mariozechner__pi-ai@0.63.1.patch
scripts/: bump.sh  tag.sh
scripts/macos/: build.sh
scripts/win/: build.ps1
server/: build.ts  index.ts  logger.ts  logger.types.ts  package.json  pnpm-lock.yaml  sparky.flows.ts  sparky.ts  tokens.ts  tsconfig.json  vitest.config.ts  workspace.db.schema.ts
server/chat/: agent.rename.ts  agent.summarize.ts  chat.db.ts  (+12 more)
src-tauri/: Cargo.toml  binaries.json  build.rs  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  models.rs  sidecar.rs  vendor.rs
website/: docusaurus.config.ts  package-lock.json  package.json
(+514 files in other folders)
