[package]
name = "sparky"
version = "0.3.6"
description = "Sparky - Agent LLM Bridge"
authors = ["you"]
license = "Apache-2.0"
repository = "https://github.com/sparky-studio/sparky"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sparky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "6"
tauri = { version = "2.10.3", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
ureq = { version = "3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
